engines/merger/bridge/base/0-spotdl-app-namespace.yaml
#! 0-spotdl-app-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: spotdl-app
    labels:
        com.docker.compose.project: spotdl-app
